Adds rotation to squid

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<style>
 			body { 
         margin: 0;
+        text-align: center;
       }
       #game {
         margin: auto;
@@ -19,6 +20,7 @@
 	</head>
 	<body>
     <p>Squid asset from <a href='https://pngtree.com/so/red'>red png from pngtree.com</a></p>
+    <p id="log"></p>
     <div id="game"></div>
 		<script src="js/three.min.js"></script>
     <script src="js/cursor_tracker.js"></script>
