Adds bubbles, resizing and scroll.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8">
 		<title>My first three.js app</title>
 		<style>
+      html {
+        background-color: deepskyblue;
+      }
 			body { 
         margin: 0;
         text-align: center;
@@ -21,7 +24,20 @@
 	<body>
     <p>Squid asset from <a href='https://pngtree.com/so/red'>red png from pngtree.com</a></p>
     <p id="log"></p>
-    <div id="game"></div>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <div id="game">    </div>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
+    <p >alksfdjafl;kjas;fljkasl</p>
 		<script src="js/three.min.js"></script>
     <script src="js/cursor_tracker.js"></script>
 	</body>
